--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,11 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Freeman&family=Noto+Sans+Elymaic&family=Poetsen+One&family=Raleway:ital,wght@0,100;1,100&family=Rock+Salt&family=Ubuntu+Sans+Mono&family=Stylish&family=Saira:ital,wght@0,100..900;1,100..900&family=Racing+Sans+One&family=Alata&display=swap"
       rel="stylesheet">
-    
 
+      <!-- COOKIEYES -->
+      <!-- Start cookieyes banner -->
+      <script id="cookieyes" type="text/javascript"
+        src="https://cdn-cookieyes.com/client_data/57451b3b31fad21de7a09878/script.js"></script> <!-- End cookieyes banner -->
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
