--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-      href="https://fonts.googleapis.com/css2?family=Freeman&family=Noto+Sans+Elymaic&family=Poetsen+One&family=Raleway:ital,wght@0,100;1,100&family=Rock+Salt&family=Ubuntu+Sans+Mono&family=Stylish&family=Saira:ital,wght@0,100..900;1,100..900&family=Racing+Sans+One&family=Alata&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Freeman&family=Saira:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300;1,300&family=Poppins:wght@700&display=swap"
       rel="stylesheet">
 
       <!-- COOKIEYES -->
