--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,16 @@
       href="https://fonts.googleapis.com/css2?family=Freeman&family=Saira:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300;1,300&family=Poppins:wght@700&display=swap"
       rel="stylesheet">
 
-      <!-- COOKIEYES -->
-      <!-- Start cookieyes banner -->
-      <script id="cookieyes" type="text/javascript"
-        src="https://cdn-cookieyes.com/client_data/57451b3b31fad21de7a09878/script.js"></script> <!-- End cookieyes banner -->
+     <!-- !-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+        w[l] = w[l] || []; w[l].push({
+          'gtm.start':
+            new Date().getTime(), event: 'gtm.js'
+        }); var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+            'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+      })(window, document, 'script', 'dataLayer', 'GTM-P5C72MTL');</script>
+    <!-- End Google Tag Manager -->
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -42,6 +48,10 @@
     -->
     <title>AlwaysOn</title>
   </head>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P5C72MTL" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
