--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="AlwaysOn is a chatbot that makes websites better for your community and provides insightful analytics."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon_b.svg" />
     <!--
